--- a/Common/Resources/Text.resx
+++ b/Common/Resources/Text.resx
@@ -433,7 +433,7 @@
     <value>ubytki szt.</value>
   </data>
   <data name="Other" xml:space="preserve">
-    <value>inne</value>
+    <value>inne - wodopoje</value>
   </data>
   <data name="Woodcocks" xml:space="preserve">
     <value>Słonki</value>
